--- a/themes/posoly/assets/css/style.css
+++ b/themes/posoly/assets/css/style.css
@@ -5,6 +5,7 @@
 
 body {
   margin: 0;
+  font-family: "Roboto", sans-serif;
 }
 
 h1, h2, h3, h4, h5, h6, p, ul, ol, blockquote, table, embed, iframe, object, video {
@@ -25,22 +26,22 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-  font-size: 50px;
+  font-size: 44px;
 }
 
 @media screen and (max-width: 1199px) {
   h1 {
-    font-size: 38px;
+    font-size: 34px;
   }
 }
 
 h2 {
-  font-size: 43px;
+  font-size: 40px;
 }
 
 @media screen and (max-width: 1199px) {
   h2 {
-    font-size: 34px;
+    font-size: 30px;
   }
 }
 
@@ -84,11 +85,18 @@ h6 {
   }
 }
 
+p {
+  color: #555;
+  font-weight: 300;
+  line-height: 1.5;
+}
+
 p:empty {
   display: none;
 }
 
 a {
+  color: #b47d37;
   text-decoration: none;
   -webkit-transition: all 0.2s ease;
   transition: all 0.2s ease;
@@ -109,81 +117,106 @@ img {
 }
 
 button {
+  padding: 10px 25px;
+  border: 1px solid #000;
+  background-color: #000;
+  color: #fff;
+  text-transform: uppercase;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 1.6;
+  letter-spacing: 1px;
   -webkit-transition: all 0.2s;
   transition: all 0.2s;
   cursor: pointer;
 }
 
+@media screen and (max-width: 1199px) {
+  button {
+    padding: 6px 15px;
+  }
+}
+
+button:hover {
+  background-color: #fff;
+  color: #000;
+}
+
+ol {
+  padding-left: 30px;
+}
+
 ul {
   list-style: none;
+  padding-left: 30px;
+}
+
+li {
+  line-height: 1.5;
 }
 
 textarea,
-input {
+input,
+select {
   min-width: 0;
-  padding: 11px 28px;
-  border: 1px solid gray;
-  border-radius: 16px;
-  color: #222;
-  font-family: sans-serif;
+  padding: 9px 25px;
+  background-color: #555;
+  border: 1px solid #555;
+  color: #fff;
+  font-family: "Roboto", sans-serif;
   font-size: 16px;
-  font-weight: normal;
-  font-style: normal;
-  font-stretch: normal;
-  line-height: 1.88;
+  font-weight: 300;
+  line-height: 1.5;
+  -webkit-transition: all 0.2s;
+  transition: all 0.2s;
   outline: none;
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
-}
-
-textarea::-webkit-input-placeholder,
-input::-webkit-input-placeholder {
-  color: grey;
-}
-
-textarea:-ms-input-placeholder,
-input:-ms-input-placeholder {
-  color: grey;
-}
-
-textarea::-ms-input-placeholder,
-input::-ms-input-placeholder {
-  color: grey;
-}
-
-textarea::placeholder,
-input::placeholder {
-  color: grey;
-}
-
-@media screen and (max-width: 1199px) {
-  textarea::-webkit-input-placeholder,
-  input::-webkit-input-placeholder {
-    font-size: 14px;
-  }
-  textarea:-ms-input-placeholder,
-  input:-ms-input-placeholder {
-    font-size: 14px;
-  }
-  textarea::-ms-input-placeholder,
-  input::-ms-input-placeholder {
-    font-size: 14px;
-  }
-  textarea::placeholder,
-  input::placeholder {
-    font-size: 14px;
-  }
-}
-
-textarea:focus,
-input:focus {
-  border-color: blue;
 }
 
 @media screen and (max-width: 1199px) {
   textarea,
-  input {
+  input,
+  select {
     padding: 6px 15px;
+  }
+}
+
+textarea::-webkit-input-placeholder,
+input::-webkit-input-placeholder,
+select::-webkit-input-placeholder {
+  color: #999;
+}
+
+textarea:-ms-input-placeholder,
+input:-ms-input-placeholder,
+select:-ms-input-placeholder {
+  color: #999;
+}
+
+textarea::-ms-input-placeholder,
+input::-ms-input-placeholder,
+select::-ms-input-placeholder {
+  color: #999;
+}
+
+textarea::placeholder,
+input::placeholder,
+select::placeholder {
+  color: #999;
+}
+
+textarea:focus,
+input:focus,
+select:focus {
+  border-color: #999;
+}
+
+select {
+  padding: 10px 23px;
+}
+
+@media screen and (max-width: 1199px) {
+  select {
+    padding: 6px 13px;
   }
 }
 
@@ -194,12 +227,6 @@ input {
 textarea {
   resize: none;
   height: 150px;
-}
-
-button {
-  padding: 0;
-  border: 0;
-  background: transparent;
 }
 
 .hidden {
@@ -231,7 +258,7 @@ button {
 [class*=p-btn] {
   display: inline-block;
   padding: 6px 20px;
-  font-family: sans-serif;
+  font-family: "Roboto", sans-serif;
   font-size: 12px;
   font-weight: 500;
   line-height: 1.67;
@@ -2492,7 +2519,7 @@ html {
 .hamburger-inner, .hamburger-inner::before, .hamburger-inner::after {
   width: 28px;
   height: 3px;
-  background-color: #4ac1e0;
+  background-color: #fff;
   border-radius: 2.5px;
   position: absolute;
   -webkit-transition-property: -webkit-transform;
@@ -2569,5 +2596,187 @@ html {
   transition: top 0.1s 0.16s cubic-bezier(0.33333, 0, 0.66667, 0.33333), -webkit-transform 0.13s 0.25s cubic-bezier(0.215, 0.61, 0.355, 1);
   transition: top 0.1s 0.16s cubic-bezier(0.33333, 0, 0.66667, 0.33333), transform 0.13s 0.25s cubic-bezier(0.215, 0.61, 0.355, 1);
   transition: top 0.1s 0.16s cubic-bezier(0.33333, 0, 0.66667, 0.33333), transform 0.13s 0.25s cubic-bezier(0.215, 0.61, 0.355, 1), -webkit-transform 0.13s 0.25s cubic-bezier(0.215, 0.61, 0.355, 1);
+}
+
+.p-header {
+  background-color: #000;
+  padding: 20px 0;
+}
+
+.p-header__main {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.p-header__logo {
+  max-width: 100px;
+}
+
+.p-header__hamburger {
+  background-color: transparent;
+}
+
+.p-header__hamburger:hover {
+  background-color: transparent;
+}
+
+@media screen and (min-width: 1025px) {
+  .p-header__hamburger {
+    display: none;
+  }
+}
+
+.p-header__nav {
+  margin-left: auto;
+}
+
+.p-header .menu {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  padding: 0;
+  list-style: none;
+}
+
+.p-header .menu-item {
+  position: relative;
+}
+
+.p-header .menu-item a {
+  display: inline-block;
+  color: #fff;
+  font-size: 16px;
+  font-weight: 300;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+}
+
+.p-header .menu-item a:hover {
+  color: #999;
+}
+
+.p-header .menu-item.current-menu-item > a {
+  color: #999;
+}
+
+.p-header .menu-item:not(:last-of-type) {
+  margin-right: 30px;
+}
+
+@media screen and (max-width: 1199px) {
+  .p-header .menu-item:not(:last-of-type) {
+    margin-right: 20px;
+  }
+}
+
+.p-header .menu .sub-menu {
+  margin-top: 0;
+  padding-left: 0;
+  list-style: none;
+}
+
+@media screen and (max-width: 1024px) {
+  .p-header .menu .sub-menu {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 230px;
+    -webkit-transition: all 0.2s;
+    transition: all 0.2s;
+    padding: 20px 0;
+    background-color: #fff;
+    visibility: hidden;
+    opacity: 0;
+    -webkit-box-shadow: 0px 2px 13px 0px rgba(0, 0, 0, 0.1);
+            box-shadow: 0px 2px 13px 0px rgba(0, 0, 0, 0.1);
+  }
+  .p-header .menu .sub-menu .sub-menu {
+    top: -20px;
+    left: 100%;
+  }
+  .p-header .menu .sub-menu .menu-item {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    margin-right: 0;
+    padding: 0 30px;
+  }
+  .p-header .menu .sub-menu a {
+    -webkit-box-flex: 1;
+        -ms-flex-positive: 1;
+            flex-grow: 1;
+    width: 100%;
+    padding: 8px 0;
+  }
+  .p-header .menu .sub-menu .menu-item-has-children:after {
+    font-family: "Ionicons";
+    content: '\f3d1';
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .p-header .menu .sub-menu a {
+    font-size: 15px;
+    line-height: 2.5;
+  }
+}
+
+.p-header .menu .menu-item-has-children:after {
+  display: inline-block;
+  margin-left: 6px;
+  font-family: "Ionicons";
+  content: '\f3d0';
+  vertical-align: middle;
+  color: #fff;
+  -webkit-transition: all 0.2s;
+  transition: all 0.2s;
+}
+
+@media screen and (max-width: 1024px) {
+  .p-header .menu .menu-item-has-children:after {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .p-header .menu {
+    width: 100%;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .p-header .menu-item:not(:last-of-type) {
+    margin-right: 0;
+  }
+  .p-header .menu-item a {
+    font-size: 18px;
+    font-weight: 400;
+  }
+}
+
+.p-footer {
+  background-color: #000;
+}
+
+.p-footer__copyright {
+  margin: 0;
+  padding: 10px 0;
+  color: #fff;
 }
 /*# sourceMappingURL=style.css.map */
