--- a/themes/posoly/assets/scss/blocks/_blocks-main.scss
+++ b/themes/posoly/assets/scss/blocks/_blocks-main.scss
@@ -1,2 +1,8 @@
 @import 'header';
 @import 'footer';
+@import 'banner';
+@import 'swiper';
+@import 'products';
+@import 'contacts';
+@import 'about_us';
+@import 'instagram';
