--- a/themes/posoly/assets/scss/blocks/_header.scss
+++ b/themes/posoly/assets/scss/blocks/_header.scss
@@ -2,6 +2,10 @@
     background-color: $c-black;
     padding: 20px 0;
 
+    @include small-size-max {
+        padding: 15px 0;
+    }
+
     &__main {
         display: flex;
         align-items: center;
@@ -10,10 +14,15 @@
 
     &__logo {
         max-width: 100px;
+
+        @include small-size-max {
+            max-width: 85px;
+        }
     }
 
     &__hamburger {
         background-color: transparent;
+        z-index: 2;
 
         &:hover {
             background-color: transparent;
@@ -22,10 +31,52 @@
         @include menu-size-min {
             display: none;
         }
+
+        &.is-active {
+            .hamburger-inner {
+                background-color: $c-black;
+
+                &::after,
+                &::before {
+                    background-color: $c-black;
+                }
+            }
+        }
     }
 
     &__nav {
         margin-left: auto;
+
+        @include menu-size-max {
+            display: none;
+        }
+
+        &.is-active {
+            display: flex;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            justify-content: center;
+            align-items: center;
+            background-color: white;
+            z-index: 2;
+            opacity: 0;
+
+            .menu {
+                text-align: center;
+            }
+
+            .menu-item {
+                margin-bottom: 15px;
+
+                a {
+                    color: $c-black;
+                    font-size: 20px;
+                }
+            }
+        }
     }
 
     .menu {
@@ -33,6 +84,12 @@
         flex-wrap: wrap;
         padding: 0;
         list-style: none;
+
+        @include menu-size-max {
+            width: 100%;
+            flex-direction: column;
+            align-items: center;
+        }
     
         &-item {
             position: relative;
@@ -40,9 +97,9 @@
             a {
                 display: inline-block;
                 color: $c-white;
-                font-size: 16px;
+                font-size: 14px;
                 font-weight: 300;
-                letter-spacing: 1px;
+                letter-spacing: 2px;
                 text-transform: uppercase;
 
                 &:hover {
@@ -62,91 +119,79 @@
                 @include large-size-max {
                     margin-right: 20px;
                 }
-            }
-        }
-    
-        .sub-menu {
-            margin-top: 0;
-            padding-left: 0;
-            list-style: none;
-        
-            @include menu-size-max {
-                position: absolute;
-                top: 100%;
-                left: 0;
-                width: 230px;
-                transition: all $trans-dur;
-                padding: 20px 0;
-                background-color: $c-white;
-                visibility: hidden;
-                opacity: 0;
-                box-shadow: 0px 2px 13px 0px rgba($c-black, 0.1);
-            
-                .sub-menu {
-                    top: -20px;
-                    left: 100%;
-                }
-            
-                .menu-item {
-                    display: flex;
-                    align-items: center;
-                    margin-right: 0;
-                    padding: 0 30px;
-                }
-            
-                a {
-                    flex-grow: 1;
-                    width: 100%;
-                    padding: 8px 0;
-                }
-            
-                .menu-item-has-children {
-                    &:after {
-                        font-family: $f-ionicons;
-                        content: '\f3d1';
-                    }
-                }
-            }
-    
-            @include menu-size-max {
-                a {
-                    font-size: 15px;
-                    line-height: 2.5;
-                }
-            }
-        }
-    
-        .menu-item-has-children {
-    
-            &:after {
-                display: inline-block;
-                margin-left: 6px;
-                font-family: $f-ionicons;
-                content: '\f3d0';
-                vertical-align: middle;
-                color: $c-white;
-                transition: all $trans-dur;
-            
+
                 @include menu-size-max {
-                    display: none;
-                }
-            }
-        }
-
-        @include menu-size-max {
-            width: 100%;
-            flex-direction: column;
-            align-items: center;
-
-            &-item {
-                &:not(:last-of-type) {
                     margin-right: 0;
                 }
-                a {
-                    font-size: 18px;
-                    font-weight: 400;
-                }
             }
         }
+    
+        // .sub-menu {
+        //     margin-top: 0;
+        //     padding-left: 0;
+        //     list-style: none;
+        
+        //     @include menu-size-max {
+        //         position: absolute;
+        //         top: 100%;
+        //         left: 0;
+        //         width: 230px;
+        //         transition: all $trans-dur;
+        //         padding: 20px 0;
+        //         background-color: $c-white;
+        //         visibility: hidden;
+        //         opacity: 0;
+        //         box-shadow: 0px 2px 13px 0px rgba($c-black, 0.1);
+            
+        //         .sub-menu {
+        //             top: -20px;
+        //             left: 100%;
+        //         }
+            
+        //         .menu-item {
+        //             display: flex;
+        //             align-items: center;
+        //             margin-right: 0;
+        //             padding: 0 30px;
+        //         }
+            
+        //         a {
+        //             flex-grow: 1;
+        //             width: 100%;
+        //             padding: 8px 0;
+        //         }
+            
+        //         .menu-item-has-children {
+        //             &:after {
+        //                 font-family: $f-ionicons;
+        //                 content: '\f3d1';
+        //             }
+        //         }
+        //     }
+    
+        //     @include menu-size-max {
+        //         a {
+        //             font-size: 15px;
+        //             line-height: 2.5;
+        //         }
+        //     }
+        // }
+    
+        // .menu-item-has-children {
+    
+        //     &:after {
+        //         display: inline-block;
+        //         margin-left: 6px;
+        //         font-family: $f-ionicons;
+        //         content: '\f3d0';
+        //         vertical-align: middle;
+        //         color: $c-white;
+        //         transition: all $trans-dur;
+            
+        //         @include menu-size-max {
+        //             display: none;
+        //         }
+        //     }
+        // }
     }
 }
