--- a/themes/posoly/assets/scss/global/_vars.scss
+++ b/themes/posoly/assets/scss/global/_vars.scss
@@ -1,5 +1,6 @@
 // FONTS
-$f-primary: "Roboto", sans-serif;
+$f-primary: "Comfortaa", sans-serif;
+$f-handwriting: "Kaushan Script", sans-serif;
 $f-ionicons: 'Ionicons';
 
 // COLORS 
