--- a/themes/posoly/assets/scss/libs/hamburgers/_hamburgers-settings.scss
+++ b/themes/posoly/assets/scss/libs/hamburgers/_hamburgers-settings.scss
@@ -3,7 +3,7 @@ $hamburger-padding-y                       : 0px;
 $hamburger-layer-width                     : 28px;
 $hamburger-layer-height                    : 3px;
 $hamburger-layer-spacing                   : 6px;
-$hamburger-layer-color                     : $c-white;
+$hamburger-layer-color                     : white;
 $hamburger-layer-border-radius             : 2.5px;
 $hamburger-hover-opacity                   : 1;
 $hamburger-hover-transition-duration       : 0.3s;
