--- a/themes/posoly/assets/scss/global/_typography.scss
+++ b/themes/posoly/assets/scss/global/_typography.scss
@@ -106,6 +106,7 @@ button {
   font-weight: 500;
   line-height: 1.6;
   letter-spacing: 1px;
+  text-align: center;
   transition: all $trans-dur;
   cursor: pointer;
 
@@ -175,4 +176,12 @@ input {
 textarea {
   resize: none;
   height: 150px;
+}
+
+blockquote {
+  border-left: 3px solid $c-active;
+  margin-left: 0;
+  padding-left: 30px;
+  padding-top: 8px;
+  padding-bottom: 8px;
 }
