--- a/themes/posoly/assets/scss/blocks/_blocks-main.scss
+++ b/themes/posoly/assets/scss/blocks/_blocks-main.scss
@@ -2,6 +2,8 @@
 @import 'footer';
 @import 'banner';
 @import 'swiper';
+@import 'product-small';
+@import 'product';
 @import 'products';
 @import 'contacts';
 @import 'about_us';
