--- a/themes/posoly/assets/scss/blocks/_header.scss
+++ b/themes/posoly/assets/scss/blocks/_header.scss
@@ -101,6 +101,7 @@
                 font-weight: 300;
                 letter-spacing: 2px;
                 text-transform: uppercase;
+                opacity: 1;
 
                 &:hover {
                     color: $c-grey;
