--- a/themes/posoly/assets/scss/global/_page-layout.scss
+++ b/themes/posoly/assets/scss/global/_page-layout.scss
@@ -8,6 +8,25 @@
 	}
 }
 
-.p-content {
+.p-section {
 	padding: 60px 0;
+
+	&--white {
+		h1,
+		h2,
+		h3,
+		h4,
+		h5,
+		h6,
+		p,
+		li {
+			color: white;
+		}
+	}
+}
+
+.p-content {
+	img {
+		border-radius: 5px;
+	}
 }
