--- a/themes/posoly/assets/scss/blocks/_contacts.scss
+++ b/themes/posoly/assets/scss/blocks/_contacts.scss
@@ -9,6 +9,49 @@
     }
 
     &__list {
-        height: 100px;
+        margin-top: 30px;
+    }
+
+    &__text {
+        display: inline-block;
+        color: $c-black;
+        font-size: 29px;
+        margin-top: 25px;
+        margin-bottom: 25px;
+
+        @include large-size-max {
+            font-size: 25px;
+        }
+
+        @include small-size-max {
+            margin-top: 0;
+            margin-bottom: 15px;
+            font-size: 20px;
+        }
+    }
+
+    &__item {
+        text-align: center;
+
+        @include small-size-max {
+            margin-bottom: 30px;
+        }
+    }
+
+    &__icon {
+        font-size: 100px;
+        color: $c-black;
+
+        @include small-size-max {
+            font-size: 120px;
+        }
+    }
+
+    &__content {
+        margin-top: 40px;
+
+        @include small-size-max {
+            margin-top: 30px;
+        }
     }
 }
