--- a/themes/posoly/assets/scss/blocks/_footer.scss
+++ b/themes/posoly/assets/scss/blocks/_footer.scss
@@ -1,6 +1,6 @@
 .p-footer {
     background-color: $c-black;
-    border-top: 1px solid $c-white;
+    border-top: 1px solid $c-darken;
 
     &__copyright {
         margin: 0;
